[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/omnilaunch/Window.gd" type="Script" id=1]

[node name="Window" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 110 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 4.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 480.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="Name" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 46.0
margin_right = 294.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "window name"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 298.0
margin_top = 5.0
margin_right = 311.0
margin_bottom = 19.0
text = "#:"

[node name="Number" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 315.0
margin_right = 389.0
margin_bottom = 24.0
value = 1.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 393.0
margin_top = 5.0
margin_right = 428.0
margin_bottom = 19.0
text = "Main:"

[node name="Main" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 432.0
margin_right = 456.0
margin_bottom = 24.0

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 460.0
margin_right = 480.0
margin_bottom = 24.0
text = "X"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 480.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
text = "Args:"

[node name="Args" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 36.0
margin_right = 480.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "window arguments"
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 480.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "Window Size:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
margin_left = 89.0
margin_right = 175.0
margin_bottom = 24.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 12.0
margin_bottom = 24.0
rect_min_size = Vector2( 12, 0 )
size_flags_vertical = 5
text = "x"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer3/HBoxContainer/Label"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SizeX" type="SpinBox" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
margin_left = 12.0
margin_right = 86.0
margin_bottom = 24.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
margin_left = 179.0
margin_right = 265.0
margin_bottom = 24.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_right = 12.0
margin_bottom = 24.0
rect_min_size = Vector2( 12, 0 )
size_flags_vertical = 5
text = "y"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer3/HBoxContainer2/Label"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SizeY" type="SpinBox" parent="VBoxContainer/HBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 12.0
margin_right = 86.0
margin_bottom = 24.0
